--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,6 @@ services:
   web:
     image: ${IMAGE_NAME}:${BUILD_NUMBER}
     ports:
-      - "8088:80"
-    command: ["npm", "run", "dev", "-- --host"]
+      - "8088:8088"
+    command: ["npm", "run", "dev", "--", "--host"]
+
