--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,6 @@ services:
     ports:
       - "8088:8088"
     command: ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+    container_name: dart-ui-image-dev
+
 
