--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,6 @@ services:
       - "8088:8088"
     command: ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
     container_name: dart-ui-image-dev
+    restart: always
 
 
